@@ -1,7 +1,14 @@
 2004-10-07  Hideyuki SHIRAI  <shirai@quickhack.net>
 
+	* emacs/mhc-summary.el (mhc-use-month-separator): Support number
+	of width.
+	(mhc-summary/insert-separator): Display 'cw' number on monthly
+	separator if it start of week. 
+	
 	* emacs/mhc.el (mhc-scan-month): Insert a weekly separator instead
 	a monthly separator when don't use monthly separator.
+	Display 'cw' number on monthly separator if it start of week.
+	
 
 2004-09-16  Hideyuki SHIRAI  <shirai@quickhack.net>
 
